resources/sass/app.scss
/* ... */
.version {
	color: gray;
	font-size: small;
	text-align: right;
	padding-right: 5px;
}

.appbar {
	opacity: 0.9;
	background-color: $base-color*0.5;
	-webkit-transition: right 0.5s;
	-moz-transition: right 0.5s;
	-o-transition: right 0.5s;
	transition: right 0.5s;	
	.app_bar_button {
		color: $base-color*0.5;
		border: 3px solid $base-color*0.5;
		background-color: white;
		opacity: 1 !important;
		font-size: 27px;
	}
}

.x-navigationview-inner {
	-webkit-transition: margin-right 0.3s;
	-moz-transition: margin-right 0.3s;
	-o-transition: margin-right 0.3s;
	transition: margin-right 0.3s;	
}

.x-course,
.x-recent-activity,
.x-calendar-event,
.x-module,
.x-grade,
.x-folder-entry,
.x-directory-entry,
.x-forum-discussion {
	padding: 5px;
	border-bottom: 1px solid $border-color;
}

.x-course-section {
	background-color: white;
	padding-top: 10px;
	padding-left: 3px;
	border-bottom: 2px solid $border-color;
	.summary {
		margin-top: 10px;
		margin-bottom: 5px;
		font-size: small;
		img {
			max-width: 100% !important;
			height: auto !important;
		}
	}
}

.x-course-section-invisible {
	color: gray !important;
	background-color: white !important;
}

.x-course-section-invisible-badge {
	text-align: right;
	padding-right: 5px;
}

.x-modules-list { }

.x-module-name,
.x-recent-activity,
.x-folder-entry,
.x-folder-entry-name,
.x-directory-entry {
	padding-top: 15px;
	text-indent: 35px;
	height: 100%;
}

.x-directory-entry {
	padding-top: 15px;
	padding-bottom: 15px;
}

.x-module-icon-choice,
.x-module-icon-assign,
.x-module-icon-assignment,
.x-module-icon-folder,
.x-module-icon-icon,
.x-module-icon-forum,
.x-module-icon-page,
.x-module-icon-scorm,
.x-module-icon-url {
}

.x-module-icon-assign {
	background:url('../images/assignment.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-assign-gray {
	background:url('../images/assignment_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-assignment {
	background:url('../images/assignment.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-assignment-gray {
	background:url('../images/assignment_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-choice {
	background:url('../images/choice.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-choice-gray {
	background:url('../images/choice_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-folder,
.x-subdirectory-icon,
.x-subfolder-icon {
	background:url('../images/folder.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-folder-gray {
	background:url('../images/folder_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-file-icon {
	background:url('../images/file.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-file-icon-gray {
	background:url('../images/file_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-forum {
	background:url('../images/forum.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-forum-gray {
	background:url('../images/forum_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-page {
	background:url('../images/page.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-page-gray {
	background:url('../images/page_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-book {
	background:url('../images/book.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-book-gray {
	background:url('../images/book_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-quiz {
	background:url('../images/quiz.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-quiz-gray {
	background:url('../images/quiz_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-scorm {
	background:url('../images/scorm.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-scorm-gray {
	background:url('../images/scorm_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-resource {
	background:url('../images/resource.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-resource-gray {
	background:url('../images/resource_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-workshop {
	background:url('../images/workshop.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-workshop-gray {
	background:url('../images/workshop_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-data {
	background:url('../images/database.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}

.x-module-icon-data-gray {
	background:url('../images/database_gray.png');
	background-repeat: no-repeat;
	background-position-x: 0px;
	background-position-y: 5px;
}
/* ... */

